force-app/main/default/objects/CampaignMember/fields/External_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Campaign_Id__c</fullName>
    <formula>Campaign.External_Record_Id__c</formula>
    <label>External Campaign Id</label>
    <type>Text</type>
</CustomField>