force-app/main/default/objects/CampaignMember/fields/External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Id__c</fullName>
    <formula>Contact.External_Record_Id__c</formula>
    <label>External Contact Id</label>
    <type>Text</type>
</CustomField>