force-app/main/default/objects/CampaignMember/fields/External_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_Id__c</fullName>
    <formula>Lead.External_Record_Id__c</formula>
    <label>External Lead Id</label>
    <type>Text</type>
</CustomField>