force-app/main/default/objects/CampaignMember/fields/External_Sync_Response__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Response__c</fullName>
    <label>External Sync Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>